crates/oracledb/tests/trybuild/fail/tuple_column_attr.rs
use oracledb::FromRow;

#[derive(FromRow)]
struct Row(#[oracledb(column = "ID")] i64);

fn main() {}
